Bug: Layout overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -84,6 +84,10 @@
   }
 }
 
+.section {
+  @apply m-3 mt-10 flex flex-col overflow-hidden rounded-xl px-6 py-10 sm:mx-16 sm:mb-10 sm:px-10 sm:py-16 lg:mx-20 lg:px-20 lg:py-20 xl:mx-32 xl:px-32;
+}
+
 /* scroll bar styles */
 ::-webkit-scrollbar {
   width: 10px;
